Changelog
=========


3.3.2 (unreleased)
------------------

- Nothing changed yet.


3.3.1 (2012-10-16)
------------------

- Cleanup readme
  [mathias.leimgruber]


3.3 (2012-10-16)
----------------

- Load upload function only on tabbedview.
  [mathias.leimgruber]

- Tabbedview: do not flush all parameters when re-sorting, but only the relevant ones.
  This allows to keep additional parameters (e.g. filters) while sorting.
  [jone]

- Reset view_name param before changing a tab.
  [mathias.leimgruber]

- Added min_height to tabbedview-body. Grey-out the tabbedview-body while loading a new tab.
  [Julian Infanger]

- Fix default tab key storage, so that it includes the user id.
  [jone]

- Adjust french translation.
  [philippegross]

- Add English translations.
  [jone]

- Add functionality for setting the default tab of a tabbed view.
  [jone]

- Change dictstorage to adapt IBrowserView instead of IListingView.
  [jone]

- Add a per-tab menu for actions such as resetting the extjs table state.
  [jone]

- Filtering: do not reload when moving cursor in the filter box.
  [jone]

- Keep height while loading tab. This reduces content height flickering.
  [jone]

- Quickupload: Limit simultaneous uploads to 1 (sequential) to avoid DB conflicts
  [lgraf]

- Prevent default in js-action for ViewChooser-links.
  [Julian Infanger]

- Fix batching expression for compatibility with plone4.2rc2 and newer.
  [jone]

- Fixed definition of ITabbedView.quickupload_addable_types
  schema.List fields always need a value_type
  [lukasg]


3.2.6 (2012-05-24)
------------------

- Make quickupload work bhind a proxy
  (url in value of hidden field will no be rewritten.)
  [mathias.leimgruber]


3.2.5 (2012-05-24)
------------------

- Fix upload js for IE8.
  [mathias.leimgruber]


3.2.4 (2012-05-22)
------------------

- Bugfix: fix sorting in grid state when it is wrong.
  [jone]


3.2.3 (2012-05-09)
------------------

- Use same markup in batching like plone.